Colaboratory を使用して作成しました

--- a/Hw11(deeplearninig11).ipynb
+++ b/Hw11(deeplearninig11).ipynb
@@ -6,7 +6,7 @@
       "name": "Hw11(deeplearninig11)",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP4uI3j1qXyiS1FHbuNErF6",
+      "authorship_tag": "ABX9TyMAIIuDkagafLNLT7VQb+uQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,15 +48,9 @@
         }
       ],
       "source": [
-        "#Hw06(deeplearninig6)\n",
-        "#損失関数とRMSEの値をエポックごとにプロット\n",
-        "import pandas as pd \n",
-        "import matplotlib.pyplot as plt\n",
-        "pd.DataFrame(history.history).plot(figsize=(10,8))\n",
-        "plt.grid(True)\n",
-        "plt.gca().set_ylim(0,60)\n",
-        "plt.xlabel(\"# of Epocs\")\n",
-        "plt.show()"
+        "#Hw11(deeplearninig11)\n",
+        "#３のアウトプットノードに関連する重みを全部について、２８＊２８の2-Dに変換\n",
+        "plt.imshow(np.reshape(keras_clf.get_weights()[0][:,3],(28,28)),cmap=\"seismic\")"
       ]
     }
   ]
