--- a/chap07_Cm03.ipynb
+++ b/chap07_Cm03.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "chap07_Cm03",
       "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMKek5LMlbP7fapDmUhJued",
+      "authorship_tag": "ABX9TyOhC/NhYkNozziPuk8CIVph",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,15 +31,22 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "CxjvCuGtiXs9"
+        "id": "C2xoEX2csMvO"
       },
       "outputs": [],
       "source": [
-        "#chapter07_Cm03\n",
-        "student_data_math.groupby(['traveltime'])['G3'].mean().plot(kind='barh')\n",
-        "plt.xlabel('G3 Grade avg')\n",
+        "#chap07_cm03\n",
+        "#indexをセット\n",
+        "dow_jones_index_stock_index = dow_jones_index.set_index(['date','stock'])\n",
         "\n",
-        "# 通学時間と成績は反比例している。"
+        "#データフレームワークの再構成\n",
+        "dow_jones_index_stock_index_unstack = dow_jones_index_stock_index.unstack()\n",
+        "\n",
+        "#closeのみ対象\n",
+        "dow_close_data = dow_jones_index_stock_index_unstack['close']\n",
+        "\n",
+        "#要約統計量\n",
+        "dow_close_data.describe()"
       ]
     }
   ]
