Colaboratory を使用して作成しました

--- a/chap07_Cm07.ipynb
+++ b/chap07_Cm07.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "chap07_Cm07",
       "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPQmm0mBHFJsHCY/jzdevyj",
+      "authorship_tag": "ABX9TyNsocR3R+PTkhQUIA5c14Ga",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,10 +31,11 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "CxjvCuGtiXs9"
+        "id": "C2xoEX2csMvO"
       },
       "outputs": [],
       "source": [
+        "\n",
         "#chapter07_cm07\n",
         "#loopなどを使うより、断然処理が速い\n",
         "log_ratio_stock_close = np.log(dow_close_data/dow_close_data.shift(1))\n",
@@ -52,7 +52,7 @@
         "log_ratio_stock_close[min_vol_stock].plot()\n",
         "plt.ylabel('log ratio')\n",
         "plt.legend()\n",
-        "plt.grid(True)"
+        "plt.grid(True)\n"
       ]
     }
   ]
