--- a/chap09_Hw3_1_2_3(explained_variance_ratio).ipynb
+++ b/chap09_Hw3_1_2_3(explained_variance_ratio).ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "chap09-Hw3-1-2_3(explained_variance_ratio)",
       "provenance": [],
-      "authorship_tag": "ABX9TyNSawmuqK+AOPO/Gn88CP7d",
+      "authorship_tag": "ABX9TyNyfVAYNbJNU3nLuwpioI3V",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,25 +35,9 @@
       },
       "outputs": [],
       "source": [
-        "#例題9-3-2_4\n",
-        "# パラメータ設定\n",
-        "arrowprops=dict(arrowstyle='->',\n",
-        "                linewidth=2,\n",
-        "                shrinkA=0, shrinkB=0)\n",
-        "\n",
-        "# 矢印を描くための関数\n",
-        "def draw_vector(v0, v1):\n",
-        "    plt.gca().annotate('', v1, v0, arrowprops=arrowprops)\n",
-        "\n",
-        "# 元のデータをプロット\n",
-        "plt.scatter(X_std[:, 0], X_std[:, 1], alpha=0.2)\n",
-        "\n",
-        "# 主成分分析の2軸を矢印で表示する\n",
-        "for length, vector in zip(pca.explained_variance_, pca.components_):\n",
-        "    v = vector * 3 * np.sqrt(length)\n",
-        "    draw_vector(pca.mean_, pca.mean_ + v)\n",
-        "\n",
-        "plt.axis('equal');"
+        "#例題9-3-2_3\n",
+        "#explained_variance_ratio_属性\n",
+        "print('各主成分の分散割合:{}'.format(pca.explained_variance_ratio_))"
       ]
     }
   ]
